--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -127,7 +127,7 @@ $(SQLR)-status$(EXE): sqlr-status.cpp sqlr-status.$(OBJ)
 
 sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../connections/*.$(OBJ)`; \
+	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -135,7 +135,7 @@ sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 
 sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../connections/*.$(OBJ)`; \
+	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -143,7 +143,7 @@ sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 
 sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../protocols/*.$(OBJ)`; \
+	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -151,7 +151,7 @@ sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 
 sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../protocols/*.$(OBJ)`; \
+	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -159,7 +159,7 @@ sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 
 sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../parsers/*.$(OBJ) | grep -v sqlre`; \
+	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -167,7 +167,7 @@ sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 
 sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../parsers/*.$(OBJ) | grep -v sqlre`; \
+	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -175,7 +175,7 @@ sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 
 sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../loggers/*.$(OBJ)`; \
+	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -183,7 +183,7 @@ sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 
 sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../loggers/*.$(OBJ)`; \
+	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -191,7 +191,7 @@ sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 
 sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../notifications/*.$(OBJ)`; \
+	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -199,7 +199,7 @@ sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 
 sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../notifications/*.$(OBJ)`; \
+	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -207,7 +207,7 @@ sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 
 sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../schedules/*.$(OBJ)`; \
+	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -215,7 +215,7 @@ sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 
 sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../schedules/*.$(OBJ)`; \
+	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -223,7 +223,7 @@ sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 
 sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../routers/*.$(OBJ)`; \
+	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -231,7 +231,7 @@ sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 
 sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../routers/*.$(OBJ)`; \
+	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -239,7 +239,7 @@ sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 
 sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../pwdencs/*.$(OBJ)`; \
+	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -247,7 +247,7 @@ sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 
 sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../pwdencs/*.$(OBJ)`; \
+	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -255,7 +255,7 @@ sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 
 sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../auths/*.$(OBJ)`; \
+	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -263,7 +263,7 @@ sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 
 sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../auths/*.$(OBJ)`; \
+	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -271,7 +271,7 @@ sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 
 sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../directives/*.$(OBJ)`; \
+	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -279,7 +279,7 @@ sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 
 sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../directives/*.$(OBJ)`; \
+	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -287,7 +287,7 @@ sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 
 sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../translations/*.$(OBJ)`; \
+	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -295,7 +295,7 @@ sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 
 sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../translations/*.$(OBJ)`; \
+	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -303,7 +303,7 @@ sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 
 sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsettranslations/*.$(OBJ)`; \
+	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -311,7 +311,7 @@ sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.c
 
 sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsettranslations/*.$(OBJ)`; \
+	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -319,7 +319,7 @@ sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp
 
 sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowtranslations/*.$(OBJ)`; \
+	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -327,7 +327,7 @@ sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarat
 
 sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowtranslations/*.$(OBJ)`; \
+	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -335,7 +335,7 @@ sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignmen
 
 sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../filters/*.$(OBJ)`; \
+	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -343,7 +343,7 @@ sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 
 sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../filters/*.$(OBJ)`; \
+	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -351,7 +351,7 @@ sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 
 sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../queries/*.$(OBJ)`; \
+	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -359,7 +359,7 @@ sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 
 sqlrqueryassignments.cpp: sqlrqueryassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../queries/*.$(OBJ)`; \
+	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
