--- a/config.h.in
+++ b/config.h.in
@@ -168,6 +168,9 @@
 /* Some versions of PHP PDO don't support const zend_function_entry */
 #undef HAVE_PHP_PDO_CONST_ZEND_FUNCTION_ENTRY
 
+/* Some versions of PHP PDO have PDO_PARAM_ZVAL */
+#undef HAVE_PHP_PDO_PARAM_ZVAL
+
 /* Some versions of postgresql have PQbinaryTuples */
 #undef HAVE_POSTGRESQL_PQBINARYTUPLES
 
