updated filters docs

--- a/doc/admin/parts/sqlrelay-filters-patterns.conf
+++ b/doc/admin/parts/sqlrelay-filters-patterns.conf
@@ -9,9 +9,10 @@
 		...
 		<filters>
 			<filter module="patterns">
-				<pattern type="regex" pattern="^(create|drop).*mytable$"/>
+				<pattern type="regex" pattern="^(create)"/>
+				<pattern type="regex" pattern="^(drop)"/>
 				<pattern type="cistring" pattern="hugetable"/>
-				<pattern type="string" scope="insidequotes" pattern="badstring"/>
+				<pattern type="string" pattern="badstring" scope="insidequotes"/>
 			</filter>
 		</filters>
 		...
