--- a/doc/admin/parts/sqlrelay-filters-string.conf
+++ b/doc/admin/parts/sqlrelay-filters-string.conf
@@ -3,6 +3,10 @@
 	...
 	<instance ...>
 		...
+		<translations>
+			<translation module="normalize"/>
+		</translations>
+		...
 		<filters>
 			<filter module="string" pattern="hugetable" ignorecase="yes" errornumbrer="100" error="string filter violation"/>
 		</filters>
