fleshed out installingpkg

--- a/doc/admin/installingpkg.wt.in
+++ b/doc/admin/installingpkg.wt.in
@@ -16,16 +16,18 @@ SQL Relay packages are currently available for:
 * !NetBSD
 * Windows
 
+Packages are not currently available for other platforms, but on other platforms, SQL Relay can be built from [installing.html source].
+
 [=#linux]
 == Linux ==
 
 SQL Relay packages are currently available for RPM-based Linux distributions like Fedora, !CentOS/RHEL, and !OpenSuSE Linux, for the x86_64 architecture.
 
-Packages are not currenly available for dpkg-based Linux like Ubunutu and Debian Linux or for non-x86_64 architectures.  On these platforms SQL Relay must be built from [installing.html source].
+Packages are not currenly available for dpkg-based Linux like Ubunutu and Debian Linux, or for non-x86_64 architectures.  On these platforms SQL Relay must be built from [installing.html source].
 
 To download the Linux packages, download the [http://sourceforge.net/projects/sqlrelay/files/sqlrelay/@SQLR_VERSION@/sqlrelay-binary-distribution-@SQLR_VERSION@.tar.gz/download SQL Relay Binary Distribution for Linux].  This file is a tar.gz containing RPMs for all supported Linux platforms.
 
-To install packages, first extract the file:
+To install the packages, first extract the file:
 
 {{{#!blockquote
 {{{
@@ -33,7 +35,7 @@ tar xfz sqlrelay-binary-distribution-@SQLR_VERSION@.tar.gz
 }}}
 }}}
 
-Then change directories into the directory that was created during the extraction:
+Then, change directories into the directory that was created during the extraction:
 
 {{{#!blockquote
 {{{
@@ -41,7 +43,7 @@ cd sqlrelay-binary-distribution-@SQLR_VERSION@
 }}}
 }}}
 
-Then change directories into the directory for the appropriate distribution, for example:
+Then, change directories into the directory for the appropriate distribution.  For example:
 
 {{{#!blockquote
 {{{
@@ -85,6 +87,8 @@ Client libraries for most of the databases supported by SQL Relay are available 
 
 For SQL Relay to work with a commercial database, you must install and configure client libraries for one or more of [http://www.oracle.com Oracle], [http://scn.sap.com/community/developer-center/oltp-db SAP/Sybase], [http://www.ibm.com/software/data/db2/ DB2], or [http://www.ibm.com/software/data/informix/ Informix].
 
+SQL Relay should now be installed.  At this point, it's safe to delete the sqlrelay-binary-distribution-@SQLR_VERSION@ directory and sqlrelay-binary-distribution-@SQLR_VERSION@.tar.gz file.
+
 [=#freebsd]
 == !FreeBSD ==
 
@@ -99,7 +103,7 @@ pkg install sqlrelay py27-sqlrelay
 [=#netbsd]
 == !NetBSD ==
 
-SQL Relay is available as a [http://ftp.netbsd.org/pub/pkgsrc/current/pkgsrc/databases/sqlrelay/README.html NetBSD] package. To install available all packages related to SQL Relay, run (as root):
+SQL Relay is available as a [http://ftp.netbsd.org/pub/pkgsrc/current/pkgsrc/databases/sqlrelay/README.html NetBSD] package. To install all available packages related to SQL Relay, run (as root):
 
 {{{#!blockquote
 {{{
@@ -111,4 +115,26 @@ ruby22-sqlrelay ruby21-sqlrelay ruby200-sqlrelay py27-sqlrelay php56-sqlrelay ph
 [=#windows]
 == Installing SQL Relay from Packages on Windows ==
 
-...
+SQL Relay packages are currently available for Windows, for the x86 and x86_64 architectures.
+
+To download the Windows packages, download the [http://sourceforge.net/projects/sqlrelay/files/sqlrelay/@SQLR_VERSION@/sqlrelay-binary-distribution-@SQLR_VERSION@.zip/download SQL Relay Binary Distribution for Windows].  This file is a zip containing Windows packages for supported platforms.
+
+To install the packages:
+
+* Open the folder that the zip was downloaded into.
+* Right click the zip file and select Extract All...
+* Open the folder that was created by the extraction (if it didn't open automatically).
+* Open the folder that is appropriate for your architecture (x86 or x64).
+* Install Rudiments...
+ * Open the rudiments folder.
+ * Double-click "setup".
+ * Follow the instructions in the installer.  Accept all defaults.
+ * In Windows Explorer, click the back arrow to return to the parent folder.
+* Install SQL Relay...
+ * Open the sqlrelay folder.
+ * Double-click "setup".
+ * Follow the instructions in the installer.  Accept all defaults.
+
+SQL Relay should now be installed.  At this point, it's safe to delete the sqlrelay-binary-distribution-@SQLR_VERSION@ folder and sqlrelay-binary-distribution-@SQLR_VERSION@.zip file.
+
+NOTE: Rudiments and SQL Relay are currently built using Visual Studio 2013, and require the [https://www.microsoft.com/en-us/download/details.aspx?id=40784 Visual C++ Redistributable Packages for Visual Studio 2013].  Try installing this package manually if you encounter problems when trying to run SQL Relay.
