connect string "timeout" -> "connecttimeout" in docs

--- a/doc/admin/parts/sqlrelay-autostart.conf
+++ b/doc/admin/parts/sqlrelay-autostart.conf
@@ -24,7 +24,7 @@
 			<user user="sqlruser" password="sqlrpassword"/>
 		</users>
 		<connections>
-                        <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;lang=C;timeout=0"/>
+                        <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;lang=C;connecttimeout=0"/>
 		</connections>
 	</instance>
 
