--- a/doc/admin/parts/sqlrelay-db2.conf
+++ b/doc/admin/parts/sqlrelay-db2.conf
@@ -6,7 +6,7 @@
 			<user user="sqlruser" password="sqlrpassword"/>
 		</users>
 		<connections>
-                        <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;timeout=0"/>
+                        <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;connecttimeout=0"/>
 		</connections>
 	</instance>
 
