--- a/doc/enterprise.wt.in
+++ b/doc/enterprise.wt.in
@@ -3,7 +3,7 @@
 Enterprise Modules provide advanced features not available in the standard SQL Relay distribution:
 
 {{{#!blockquote
-[../sqlrenterprise/features/nativeprotocol.html MySQL Front-End Modules] - allow !MySQL applications to use SQL Relay without modification and without a drop-in replacement library[[br]]
+[../sqlrenterprise/features/nativeprotocol.html MySQL Front-End Modules] - allow !MySQL/MariaDB applications to use SQL Relay without modification and without a drop-in replacement library[[br]]
 (more Enterprise Modules coming soon...)
 }}}
 
