added NODEGYPPYTHON flag that can be set manually on netbsd

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -39,7 +39,8 @@ all-java:
 	cd java $(AND) $(MAKE) all
 
 all-jdbc:
-	cd jdbc $(AND) $(MAKE) all
+	# disabled for now
+	#cd jdbc $(AND) $(MAKE) all
 
 all-tcl:
 	cd tcl $(AND) $(MAKE) all
@@ -141,7 +142,8 @@ install-java:
 	cd java $(AND) $(MAKE) install
 
 install-jdbc:
-	cd jdbc $(AND) $(MAKE) install
+	# disabled for now
+	#cd jdbc $(AND) $(MAKE) install
 
 install-tcl:
 	cd tcl $(AND) $(MAKE) install
