--- a/src/server/sqlrparserassignments.cpp.in
+++ b/src/server/sqlrparserassignments.cpp.in
@@ -1,3 +1,3 @@
 	if (!charstring::compare(parsername.getString(),"@module@")) {
-		parser=new_sqlrparser_@module@(this,sqlrpnode);
+		parser=new_sqlrparser_@module@(this,pvt->_sqlrpnode);
 	} else
